--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-tensorflow
-numpy
-opencv-python-headless
-gunicorn
-flask-cors
+Flask==2.0.1
+tensorflow==2.6.0
+numpy==1.19.5
+opencv-python-headless==4.5.3.56
+gunicorn==20.1.0
+flask-cors==3.1.1
